@@ -1,3 +1,4 @@
+* Add rate limitation capabilities on inboud parameters of RPC calls
 * Protect trusted devices against brute force attack
 * Eager load Function field with same multiple getter
 
